--- a/ATOZ/MvcRetailApp/Views/PurchaseOrder/PrintPurchaseOrder.cshtml
+++ b/ATOZ/MvcRetailApp/Views/PurchaseOrder/PrintPurchaseOrder.cshtml
@@ -211,9 +211,11 @@
 
         doc.addImage(imgData, 'PNG', headerLeftMargin, headerTopMargin, 120, 120);
         doc.setFontSize(12);
-        doc.text('Maria Infotech Pvt Ltd', headerLeftMargin, headerTopMargin + 120, '');
+        doc.text('Shedwale PVT LTD', headerLeftMargin, headerTopMargin + 120, '');
         doc.setFontSize(8);
-        doc.text('Shreeji Solitaire, Khadakpada, Kalyan West,Mumbai - 400301', headerLeftMargin - 50, headerTopMargin + 130, '');
+        doc.text('B-601/2/3,Universal Business Park,Chandivali Farm Road,Opp Kamani Oil Mill,Andheri,Mumbai-400072', headerLeftMargin - 50, headerTopMargin + 130, '');
+        doc.setFontSize(8);
+        doc.text('9773838383', headerLeftMargin - 50, headerTopMargin + 130, '');
 
         doc.setFontSize(20);
         doc.text('Purchase Order', headerLeftMargin - 20, headerTopMargin + 160, '');
@@ -519,8 +521,10 @@
                                 </tr>
                                 <tr>
                                     <td colspan="8" style="text-align: center;">
-                                        <label><b>Maria Infotech</b></label><br />
-                                        <label>Shreeji Solitaire, Khadakpada Circle, Kalyan West,Mumbai - 400301</label>
+                                        <label><b>Shedwale Pvt LTD</b></label><br />
+                                        <label>B-601/2/3,Universal Business Park,Chandivali Farm Road,Opp Kamani Oil Mill,Andheri,Mumbai-400072</label>
+                                        <br />
+                                        <label> Ph No.+91 9773838383</label>
                                     </td>
                                 </tr>
                                 <tr>
