--- a/ATOZ/MvcRetailApp/Views/TypeOfMaterial/Edit.cshtml
+++ b/ATOZ/MvcRetailApp/Views/TypeOfMaterial/Edit.cshtml
@@ -159,8 +159,7 @@
 <script type="text/javascript">
     function UpdateMaterialPartial() {
 
-        if ($("#MaterialDetails_MaterialName").val() == "" || $("#MaterialDetails_MaterialShortName").val() == "" ||
-            $("#MaterialDetails_MaterialDescription").val() == "" || $("#MaterialDetails_MaterialDescription").val() == "") {
+        if ($("#MaterialDetails_MaterialName").val() == "" ) {
             return false;
         }
         else {
