--- a/ATOZ/MvcRetailApp/Views/TypeOfMaterial/EditPartial.cshtml
+++ b/ATOZ/MvcRetailApp/Views/TypeOfMaterial/EditPartial.cshtml
@@ -44,7 +44,7 @@
 
                 <div class="row">
                     <div class="form-group col-md-4 col-lg-4">
-                        <label>Material Short Name<i style="color: red">*</i></label>
+                        <label>Material Short Name<i style="color: red"></i></label>
                     </div>
                     <div class="form-group col-md-5 col-lg-5">
                         @Html.TextBoxFor(model => model.MaterialDetails.MaterialShortName, new { @class = "form-control", @placeholder = "MaterialShortName" })
@@ -54,7 +54,7 @@
 
                 <div class="row">
                     <div class="form-group col-md-4 col-lg-4">
-                        <label>Material Description<i style="color: red">*</i></label>
+                        <label>Material Description<i style="color: red"></i></label>
                     </div>
                     <div class="form-group col-md-5 col-lg-5">
                         @Html.TextAreaFor(model => model.MaterialDetails.MaterialDescription, new { @class = "form-control", @placeholder = "Material Description" })
