--- a/ATOZ/MvcRetailApp/Views/Bank/Create.cshtml
+++ b/ATOZ/MvcRetailApp/Views/Bank/Create.cshtml
@@ -295,9 +295,9 @@ $(this).parents('form:eq(0),body').find('button,input,textarea,select');
                                         @Html.ValidationMessageFor(model => model.BankDetails.Branch, null, new { style = "color:red", @placeholder = "Branch" })
                                     </div>
                                     <div class="form-group row">
-                                        <label>Address<label style="color: red">*</label></label>
+                                        <label>Address<label style="color: red"></label></label>
                                         @Html.TextAreaFor(model => model.BankDetails.address, new { @class = "form-control", @placeholder = "Address" })
-                                        @Html.ValidationMessageFor(model => model.BankDetails.address, null, new { style = "color:red", @placeholder = "Address" })
+                                        @*@Html.ValidationMessageFor(model => model.BankDetails.address, null, new { style = "color:red", @placeholder = "Address" })*@
                                     </div>
                                 </div>
                             </div>
@@ -316,9 +316,9 @@ $(this).parents('form:eq(0),body').find('button,input,textarea,select');
                                         @Html.ValidationMessageFor(model => model.BankDetails.pinCode, null, new { style = "color:red" })
                                     </div>
                                     <div class="form-group row">
-                                        <label>Contact No. 1<label style="color: red">*</label></label>
+                                        <label>Contact No. 1<label style="color: red"></label></label>
                                         @Html.TextBoxFor(model => model.BankDetails.ContactNo1, new { @class = "form-control", @placeholder = "Mobile No. 1" , @autocomplete = "off" })
-                                        @Html.ValidationMessageFor(model => model.BankDetails.ContactNo1, null, new { style = "color:red" })
+                                        @*@Html.ValidationMessageFor(model => model.BankDetails.ContactNo1, null, new { style = "color:red" })*@
                                     </div>
                                 </div>
                             </div>
@@ -336,9 +336,9 @@ $(this).parents('form:eq(0),body').find('button,input,textarea,select');
                                         @Html.ValidationMessageFor(model => model.BankDetails.ContactNo3, null, new { style="color:red" })
                                     </div>
                                     <div class="form-group row">
-                                        <label>Email<label style="color: red">*</label></label>
+                                        <label>Email<label style="color: red"></label></label>
                                         @Html.TextBoxFor(model => model.BankDetails.email, new { @class = "form-control", @placeholder = "Email" , @autocomplete = "off" })
-                                        @Html.ValidationMessageFor(model => model.BankDetails.email, null, new { style = "color:red" })
+                                        @*@Html.ValidationMessageFor(model => model.BankDetails.email, null, new { style = "color:red" })*@
                                         <label id="checkemail" style="display: none" class="error"></label>
 
                                     </div>
