--- a/ATOZ/MvcRetailApp/Views/Bank/EditPartial.cshtml
+++ b/ATOZ/MvcRetailApp/Views/Bank/EditPartial.cshtml
@@ -42,9 +42,9 @@
                                         @Html.ValidationMessageFor(model => model.BankDetails.Branch, null, new { style = "color:red" })
                                     </div>
                                     <div class="form-group row">
-                                        <label>Address<i style="color: red">*</i></label>
+                                        <label>Address<i style="color: red"></i></label>
                                         @Html.TextBoxFor(model => model.BankDetails.address, new { @class = "form-control", @placeholder = "address", @autocomplete = "off" })
-                                        @Html.ValidationMessageFor(model => model.BankDetails.address, null, new { style = "color:red" })
+                                        @*@Html.ValidationMessageFor(model => model.BankDetails.address, null, new { style = "color:red" })*@
                                     </div>
                                     <div class="form-group row">
                                         <label>Bank IFSC No.<i style="color: red">*</i></label>
@@ -67,9 +67,9 @@
                                         @Html.ValidationMessageFor(model => model.BankDetails.pinCode, null, new { style = "color:red" })
                                     </div>
                                     <div class="form-group row">
-                                        <label>Contact No. 1<i style="color: red">*</i></label>
+                                        <label>Contact No. 1<i style="color: red"></i></label>
                                         @Html.TextBoxFor(model => model.BankDetails.ContactNo1, new { @class = "form-control", @placeholder = "Contact No 1", @autocomplete = "off" })
-                                        @Html.ValidationMessageFor(model => model.BankDetails.ContactNo1, null, new { style = "color:red" })
+                                        @*@Html.ValidationMessageFor(model => model.BankDetails.ContactNo1, null, new { style = "color:red" })*@
                                     </div>
                                     <div class="form-group row">
                                         <label>Contact No. 2</label>
@@ -87,9 +87,9 @@
                                         @Html.ValidationMessageFor(model => model.BankDetails.ContactNo3, null, new { style = "color:red" })
                                     </div>
                                     <div class="form-group row">
-                                        <label>Email<i style="color: red">*</i></label>
+                                        <label>Email<i style="color: red"></i></label>
                                         @Html.TextBoxFor(model => model.BankDetails.email, new { @class = "form-control", @placeholder = "email" , @autocomplete = "off" })
-                                        @Html.ValidationMessageFor(model => model.BankDetails.email, null, new { style = "color:red" })
+                                        @*@Html.ValidationMessageFor(model => model.BankDetails.email, null, new { style = "color:red" })*@
                                     </div>
                                     <div class="form-group row">
                                         <label>Website</label>
