--- a/ATOZ/MvcRetailApp/Views/TypeOfMaterial/Create.cshtml
+++ b/ATOZ/MvcRetailApp/Views/TypeOfMaterial/Create.cshtml
@@ -157,22 +157,22 @@
 
                                 <div class="row">
                                     <div class="form-group col-md-3 col-lg-3">
-                                        <label>Material Short Name<label style="color:red">*</label></label>
+                                        <label>Material Short Name<label style="color:red"></label></label>
 
                                     </div>
                                     <div class="form-group col-md-3 col-lg-3">
                                         @Html.TextBoxFor(model => model.MaterialDetails.MaterialShortName, new { @placeholder = "Material Short Name", @class = "form-control" })
-                                        @Html.ValidationMessageFor(model => model.MaterialDetails.MaterialShortName, null, new { style = "color:red" })
+                                        @*@Html.ValidationMessageFor(model => model.MaterialDetails.MaterialShortName, null, new { style = "color:red" })*@
                                     </div>
                                 </div>
 
                                 <div class="row">
                                     <div class="form-group col-md-3 col-lg-3">
-                                        <label>Material Description<label style="color:red">*</label></label>
+                                        <label>Material Description<label style="color:red"></label></label>
                                     </div>
                                     <div class="form-group col-md-3 col-lg-3">
                                         @Html.TextAreaFor(model => model.MaterialDetails.MaterialDescription, new { @placeholder = "Material Description", @class = "form-control" })
-                                        @Html.ValidationMessageFor(model => model.MaterialDetails.MaterialDescription, null, new { style = "color:red" })
+                                        @*@Html.ValidationMessageFor(model => model.MaterialDetails.MaterialDescription, null, new { style = "color:red" })*@
                                     </div>
                                 </div>
 
