--- a/ATOZ/MvcRetailApp/Views/Client/Details.cshtml
+++ b/ATOZ/MvcRetailApp/Views/Client/Details.cshtml
@@ -160,6 +160,10 @@
                                             <label for="exampleInputDistrict">District</label><br />
                                             @Html.DisplayFor(model => model.ClientDetails.District)
                                         </div>
+                                        <div class="form-group row">
+                                            <label for="exampleInputDistrict">Remark</label><br />
+                                            @Html.DisplayFor(model => model.ClientDetails.Remark)
+                                        </div>
                                     </div>
                                 </div>
 
@@ -223,6 +227,10 @@
                                                 </div>
                                                 }
                                             }
+                                        </div>
+                                        <div class="form-group row">
+                                            <label for="exampleInputDistrict">Requriment</label><br />
+                                            @Html.DisplayFor(model => model.ClientDetails.Requriment)
                                         </div>
                                     </div>
                                 </div>
@@ -320,11 +328,19 @@
                                                 }
                                             }
                                         </div>
+                                        <div class="form-group row">
+                                            <label for="exampleInputDistrict">Date</label><br />
+                                            @Html.DisplayFor(model => model.ClientDetails.Date)
+                                        </div>
                                     </div>
                                 </div>
 
                                 <div class="col-md-3 col-lg-3">
                                     <div class="col-md-12 col-lg-12">
+                                        <div class="form-group row">
+                                            <label for="exampleInputDistrict">Schedule Date</label><br />
+                                            @Html.DisplayFor(model => model.ClientDetails.ScheduleDate)
+                                        </div>
                                         <div class="form-group row">
                                             <label for="exampleInputPANNo">Pan No</label><br />
                                             @{
