--- a/ATOZ/MvcRetailApp/Views/Client/Create.cshtml
+++ b/ATOZ/MvcRetailApp/Views/Client/Create.cshtml
@@ -66,6 +66,62 @@
 <link href="~/Content/customAlerts.css" rel="stylesheet" />
 <script src="~/Scripts/bootbox.js"></script>
 
+<link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/themes/base/jsDatePick_ltr.css")" />
+<link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/themes/base/jsDatePick_ltr.min.css")" />
+<script type="text/javascript" src="@Url.Content("~/Scripts/jsDatePick.min.1.3.js")"></script>
+<script type="text/javascript" src="@Url.Content("~/Scripts/jsDatePick.jquery.min.1.3.js")"></script>
+
+<link href="~/Content/customAlerts.css" rel="stylesheet" />
+<script src="~/Scripts/bootbox.js"></script>
+
+
+<script type="text/javascript">
+    //$(document).ready(function () {
+    //    var data = new JsDatePick({
+    //        useMode: 2,
+    //        target: "ClientLeads_ScheduleDate",
+    //        dateFormat: "%d/%M/%Y"
+    //    });
+
+    //    data.addOnSelectedDelegate(function() {
+    //        var today = new Date();
+    //        var birth = document.getElementById("ClientLeads_ScheduleDate").value;
+    //        var birthDate = new Date(birth);
+    //     //   $("#EmployeeDetails_DateOfBirth").val("");
+    //        var age = today.getFullYear() - birthDate.getFullYear();
+    //        var m = today.getMonth() - birthDate.getMonth();
+    //        if (m < 0 || (m === 0 && today.getDate() < birthDate.getDate())) {
+    //            age--;
+    //        }
+    //    });
+    //});
+
+
+    window.onload = function () {
+        var cal_start = new JsDatePick({
+            useMode: 2,
+            target: "ClientDetails_ScheduleDate",
+            dateFormat: "%m/%d/%Y"
+        });
+        cal_start.addOnSelectedDelegate(function () {
+            document.getElementById('ClientDetails_ScheduleDate').value = cal_start.getSelectedDayFormatted();
+            cal_end.showCalendar();
+        });
+    };
+
+    //$.getJSON("/ClientLead/LoadDistrictByState", { statename: idmodel },
+    //      function (Data) {
+    //          var select = $("#ddldistrict");
+    //          select.empty();
+    //          select.append($('<option/>', {
+    //              value: "",
+    //              text: "Select District"
+    //          }));
+    //      });
+</script>
+
+
+
 <script type="text/javascript">
     jQuery(document).ready(function () {
 
@@ -564,6 +620,11 @@ $(this).parents('form:eq(0),body').find('button,input,textarea,select');
                                         @Html.TextBoxFor(model => model.ClientDetails.City, new { @placeholder = "City", @class = "form-control", @autocomplete = "off" })
                                         @Html.ValidationMessageFor(model => model.ClientDetails.City, null, new { style = "color:red", @id = "city" })
                                     </div>
+                                    <div class="form-group row">
+                                        <label for="exampleInputCity">Remark<i style="color: red">*</i></label>
+                                        @Html.TextBoxFor(model => model.ClientDetails.Remark, new { @placeholder = "Remark", @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.ClientDetails.Remark, null, new { style = "color:red", @id = "remark" })
+                                    </div>
                                 </div>
                             </div>
 
@@ -600,6 +661,12 @@ $(this).parents('form:eq(0),body').find('button,input,textarea,select');
                                         @Html.ValidationMessageFor(model => model.ClientDetails.Email, null, new { style = "color:red", @id = "email" })
                                         <label id="errormsg" class="error" style="display: none"></label>
                                     </div>
+                                    <div class="form-group row">
+                                        <label for="exampleInputCity">Requriment<i style="color: red">*</i></label>
+                                        @Html.TextBoxFor(model => model.ClientDetails.Requriment, new { @placeholder = "Requriment", @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.ClientDetails.Requriment, null, new { style = "color:red", @id = "requriment" })
+                                        <label id="errormsg" class="error" style="display: none"></label>
+                                    </div>
                                 </div>
                             </div>
 
@@ -630,18 +697,28 @@ $(this).parents('form:eq(0),body').find('button,input,textarea,select');
                                         @Html.TextBoxFor(model => model.ClientDetails.TDSNo, new { @placeholder = "TDSNo", @class = "form-control", @autocomplete = "off" })
                                         @Html.ValidationMessageFor(model => model.ClientDetails.TDSNo, null, new { style = "color:red" })
                                     </div>
-                                    <div class="form-group row">
+                                    @*<div class="form-group row">*@
                                         <div class="form-group">
                                             <label for="exampleInputPANNo">Pan No</label>
                                             @Html.TextBoxFor(model => model.ClientDetails.PanCard, new { @placeholder = "Pan No", @class = "form-control", @autocomplete = "off" })
                                             @Html.ValidationMessageFor(model => model.ClientDetails.PanCard)
                                         </div>
+                                    @*</div>*@
+                                    <div class="form-group row">
+                                        <label for="exampleInputTDS">Date</label>
+                                        @Html.TextBoxFor(model => model.ClientDetails.Date, new { @placeholder = "Date", @class = "form-control", @autocomplete = "off" ,@readonly="readonly" })
+                                        @Html.ValidationMessageFor(model => model.ClientDetails.Date, null, new { style = "color:red" })
                                     </div>
                                 </div>
                             </div>
 
                             <div class="col-md-3 col-lg-3">
                                 <div class="col-md-12 col-lg-12">
+                                    <div class="form-group row">
+                                        <label for="exampleInputTDS">Schedule Date</label>
+                                        @Html.TextBoxFor(model => model.ClientDetails.ScheduleDate, new { @placeholder = "Schedule Date", @class = "form-control", @autocomplete = "off", @id = "ClientDetails_ScheduleDate" })
+                                        @Html.ValidationMessageFor(model => model.ClientDetails.ScheduleDate, null, new { style = "color:red", @id = "scheduledate" })
+                                    </div>
                                     <div class="form-group row">
                                         <label for="exampleInputSalesTax">Dealer</label><br />
                                         <input type="radio" id="Local" name="LocalOMS" onclick="CheckState('local')" />
@@ -674,6 +751,7 @@ $(this).parents('form:eq(0),body').find('button,input,textarea,select');
                                         </div>
                                         <br />
                                     </div>
+                                    
                                 </div>
                             </div>
                         </div>
