--- a/ATOZ/MvcRetailApp/Views/Client/Edit.cshtml
+++ b/ATOZ/MvcRetailApp/Views/Client/Edit.cshtml
@@ -66,6 +66,60 @@
 <link href="~/Content/customAlerts.css" rel="stylesheet" />
 <script src="~/Scripts/bootbox.js"></script>
 
+<link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/themes/base/jsDatePick_ltr.css")" />
+<link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/themes/base/jsDatePick_ltr.min.css")" />
+<script type="text/javascript" src="@Url.Content("~/Scripts/jsDatePick.min.1.3.js")"></script>
+<script type="text/javascript" src="@Url.Content("~/Scripts/jsDatePick.jquery.min.1.3.js")"></script>
+
+<link href="~/Content/customAlerts.css" rel="stylesheet" />
+<script src="~/Scripts/bootbox.js"></script>
+
+
+<script type="text/javascript">
+    //$(document).ready(function () {
+    //    var data = new JsDatePick({
+    //        useMode: 2,
+    //        target: "ClientLeads_ScheduleDate",
+    //        dateFormat: "%d/%M/%Y"
+    //    });
+
+    //    data.addOnSelectedDelegate(function() {
+    //        var today = new Date();
+    //        var birth = document.getElementById("ClientLeads_ScheduleDate").value;
+    //        var birthDate = new Date(birth);
+    //     //   $("#EmployeeDetails_DateOfBirth").val("");
+    //        var age = today.getFullYear() - birthDate.getFullYear();
+    //        var m = today.getMonth() - birthDate.getMonth();
+    //        if (m < 0 || (m === 0 && today.getDate() < birthDate.getDate())) {
+    //            age--;
+    //        }
+    //    });
+    //});
+
+
+    window.onload = function () {
+        var cal_start = new JsDatePick({
+            useMode: 2,
+            target: "ClientDetails_ScheduleDate",
+            dateFormat: "%m/%d/%Y"
+        });
+        cal_start.addOnSelectedDelegate(function () {
+            document.getElementById('ClientDetails_ScheduleDate').value = cal_start.getSelectedDayFormatted();
+            cal_end.showCalendar();
+        });
+    };
+
+    //$.getJSON("/ClientLead/LoadDistrictByState", { statename: idmodel },
+    //      function (Data) {
+    //          var select = $("#ddldistrict");
+    //          select.empty();
+    //          select.append($('<option/>', {
+    //              value: "",
+    //              text: "Select District"
+    //          }));
+    //      });
+</script>
+
 <script type="text/javascript">
     function alertbox(message) {
         var sample = document.getElementById("audio");
